# escola-timetable

./: .gitignore  README.md  app.py  data_generator.py  database.py  escola.db  export.py  main.py  models.py  neuro_rules.py  or_tools  pyproject.toml  requirements.txt  scheduler.py  scheduler_ortools.py  session_state.py  simple_scheduler.py
