[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "escola-timetable"
version = "0.1.0"
description = "Gerador inteligente de grade horária escolar"
authors = [{name = "Seu Nome", email = "seu@email.com"}]
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
]
requires-python = ">=3.8"

[project.scripts]
escola-timetable = "main:main"
